# gol

./: Cell.hs  CountingList.hs  GameData.hs  Matrix.hs  README.md  gol.cabal  gol.hs  rules.hs
doc/Matrix/: Matrix.html  doc-index.html  index-frames.html  index.html  mini_Matrix.html
src/: GameData.hs  Matrix.hs  MatrixSafe.hs  PrettyShow.hs  Rules.hs  Vector2D.hs  gol.hs  rules.hs
src/Card/: Unary.hs
