name: gol
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: conways game of live
description:
data-dir: ""

executable gol
    build-depends: QuickCheck -any, base -any, gloss -any, array, mtl, random
    main-is: Gol.hs
    buildable: True
    hs-source-dirs: src
